# bct_hack

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  GEMINI.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  claude-code-review.yml
data/: yelp_agent_data.csv
data/yelp_review/: test.csv
demos/: recommend_demo.py
docs/: data.md  task_A.md  task_B.md
notebooks/: Yelp_EDA.ipynb
paper/: convert.py  task_a_solution.md  task_b_solution.md
scripts/: ingest.py  ingest_businesses.py  ingest_reviews.py
src/: api.py  main.py  main_recommend.py
src/agent/: graph.py  state.py
src/agent/nodes/: analyst.py  drafter.py  reasoner.py  retriever.py
src/agent/recommender/: graph.py  state.py
src/agent/recommender/nodes/: candidate.py  profiler.py  ranker.py
src/agent/reviewer/: graph.py  state.py
src/agent/reviewer/nodes/: analyst.py  business_retriever.py  critic.py  drafter.py  reasoner.py  retriever.py
src/core/: embeddings.py  llm.py  settings.py  vectorstore.py
tests/: conftest.py
tests/agent/recommender/: test_candidate.py  test_profiler.py  test_ranker.py
tests/agent/reviewer/: test_analyst.py  test_drafter.py
tests/core/: test_llm.py
tests/scripts/: test_ingest_businesses.py
