[project]
name = "bct-hack"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "chromadb>=1.5.9",
    "langchain>=1.2.17",
    "langchain-anthropic>=1.4.3",
    "langchain-chroma>=1.1.0",
    "langchain-google-genai>=4.2.2",
    "langgraph>=1.1.10",
    "pydantic-settings>=2.14.0",
]
